syntax = "proto3";
package api;

 enum Venue{
	DARKPOOL    =  0;
	COINBASEPRO =  1;
	BITMEX      =  2;
	BITFINEX    =  3;
	BINANCE     =  4;
	GEMINI      =  5;
   }
  
 enum AccountMode{
	LIVE               = 0;
	DEMO               = 1;
  };
  
   enum AccountType{
	NET                 = 0;
	HEDGE               = 1;
	CROSS_VENUE_NET     = 2;
	CROSS_VENUE_HEDGE   = 3;
  };
  
 enum VenueType{
   SPOT       = 0;
   FUTURES    = 1;
  };
  
 enum Symbol{
	 BTC   = 0;
	 ETH   = 1;
	 USD   = 2;
	 LTC   = 3;
	 BCH   = 4;
	 ETC   = 5;
   }
   
   enum Product{
	 BTC_USD = 0;
	 ETH_BTC = 1;
	 ETH_USD = 2;
	 LTC_USD = 3;
	 LTC_BTC = 4;   
	 LTC_ETH = 5;
	 BCH_USD = 6;
	 BCH_BTC = 7;
	 BCH_ETH = 8;
	 ETC_USD = 9;
	 ETC_BTC = 10;
	 ETC_ETH = 11;
   }
   
   enum OrderType {
	BUY                = 0;
	SELL               = 1; 
	BUY_LIMIT          = 2;  
	SELL_LIMIT         = 3;
	BUY_STOP           = 4;
	SELL_STOP          = 5;
	BUY_STOP_LIMIT     = 6;
	SELL_STOP_LIMIT    = 7;
	CLOSING_BY         = 8;
   }
  
   enum OrderState {
	STARTED           = 0;
	PLACED            = 1;
	CANCELED          = 2;
	PARTIAL           = 3;
	FILLED            = 4;
	REJECTED          = 5;
	EXPIRED           = 6;
	REQUEST_ADD       = 7;
	REQUEST_MODIFY    = 8;  
	REQUEST_CANCEL    = 9;
   }
  
   enum OrderTypeFilling {
	FOK           = 0;
	IOC           = 1;
	RETURN        = 2;
   }
  
   enum OrderReason {
	ORDER_CLIENT        = 0;
	ORDER_MOBILE        = 1;
	ORDER_WEB           = 2;
	ORDER_STRATEGY      = 3;
	ORDER_SL            = 4;
	ORDER_TP            = 5;
	ORDER_SO            = 6;
   } 
  
   enum OrderTypeTime {
	GTC              = 0;
	DAY              = 1;
	SPECIFIED        = 2;
	SPECIFIED_DAY    = 3;
   } 
  
   enum DealType {
	DEAL_BUY                = 0;
	DEAL_SELL               = 1; 
	BALANCE                 = 2;  
	CREDIT                  = 3;
	CHARGE                  = 4;
	CORRECTION              = 5;
	BONUS                   = 6;
	COMMISSION              = 7;
	INTEREST                = 8;
	BUY_CANCELED            = 9;
	SELL_CANCELED           = 10;
	DIVIDEND                = 11;
   }
  
	enum DealEntry {
	IN                = 0;
	OUT               = 1; 
	INOUT             = 2;  
	OUT_BY            = 3;
   }
  
   enum DealReason {
	DEAL_CLIENT        = 0;
	DEAL_MOBILE        = 1;
	DEAL_WEB           = 2;
	DEAL_STRATEGY      = 3;
	DEAL_SL            = 4;
	DEAL_TP            = 5;
	DEAL_SO            = 6;
	ROLLOVER           = 7;
	VMARGIN            = 8;
	SPLIT              = 9;
	AJUST              = 10;
   } 
  
   enum PositionReason {
	POSITION_CLIENT        = 0;
	POSITION_MOBILE        = 1;
	POSITION_WEB           = 2;
	POSITION_STRATEGY      = 3;
   } 
  
   enum PositionType {
	POSITION_BUY    = 0;
	POSITION_SELL   = 1; 
   } 
	
  
   enum TradeAction {
	DEAL        = 0;
	PENDING     = 1;
	SLTP        = 2;
	MODIFY      = 3;
	REMOVE      = 4;
	CLOSE_BY    = 5;
   }
  
   enum Retcode {
	REJECTX                        = 0;
	REJECT                         = 2;
	CANCEL                         = 3;
	PLACED_TRADE                   = 4;
	DONE                           = 5;
	DONE_PARTIAL                   = 6;
	ERROR                          = 7;
	TIMEOUT                        = 8;
	INVALID                        = 9;
	INVALID_VOLUME                 = 10;
	INVALID_PRICE                  = 11;
	INVALID_STOPS                  = 12;
	TRADE_DISABLED                 = 13;
	MARKET_CLOSED                  = 14;
	NO_MONEY                       = 15;
	PRICE_CHANGED                  = 16;
	PRICE_OFF                      = 17;
	INVALID_EXPIRATION             = 18;
	ORDER_CHANGED                  = 19;
	TOO_MANY_REQUESTS              = 21;
	NO_CHANGES                     = 22;
	SERVER_DISABLES_AT             = 23;
	CLIENT_DISABLES_AT             = 24;
	LOCKED                         = 25;
	FROZEN                         = 26;
	INVALID_FILL                   = 27;
	CONNECTION                     = 28;
	ONLY_REAL                      = 29;
	LIMIT_ORDERS                   = 30;
	LIMIT_VOLUME                   = 31;
	INVALID_ORDER                  = 32;
	POSITION_CLOSED                = 33;
	CLOSE_ORDER_EXIST              = 34;
	LIMIT_POSITIONS                = 35;
	REJECT_CANCEL                  = 36;
	LONG_ONLY                      = 37;
	SHORT_ONLY                     = 38;
	CLOSE_ONLY                     = 39;
	REQUEST_WITH_NO_TOKEN          = 40;
	INVALID_TOKEN                  = 41;
	INVALID_REQUEST_CONTEXT        = 42;  
	INVALID_REQUEST                = 43;  
   }

   enum Granularity{
	GRANULARITY_0M  			= 0;
	GRANULARITY_1M  			= 60;
	GRANULARITY_2M  			= 120;
	GRANULARITY_3M  			= 180;
	GRANULARITY_4M  			= 240;
	GRANULARITY_5M  			= 300;
	GRANULARITY_6M  			= 360;
	GRANULARITY_7M  			= 420;
	GRANULARITY_8M  			= 480;
	GRANULARITY_9M  			= 540;
	GRANULARITY_10M  			= 600;
	GRANULARITY_15M  			= 900;
	GRANULARITY_20M  			= 1200;
	GRANULARITY_30M  			= 1800;
	GRANULARITY_40M  			= 2400;
	GRANULARITY_50M  			= 3000;
	GRANULARITY_1H  			= 3600;
	GRANULARITY_2H  			= 7200;
	GRANULARITY_3H  			= 10800;
	GRANULARITY_4H  			= 14400;
	GRANULARITY_5H  			= 18000;
	GRANULARITY_6H  			= 21600;
	GRANULARITY_7H  			= 25200;
	GRANULARITY_8H  			= 28800;
	GRANULARITY_9H  			= 32400;
	GRANULARITY_10H  			= 36000;
	GRANULARITY_11H  			= 39600;
	GRANULARITY_12H  			= 43200;
	GRANULARITY_1D  			= 86400;
};
  
  enum CandleGroupBy{
	TIME       = 0;
	VOLUME     = 2;
	TRADE      = 3;
  };