syntax = "proto3";
package api;
import "enum.proto";
import "marketdata.proto";
import "execution.proto";
import "backtesting.proto";
import "balances.proto";

message HistoricalTradesRequest { 
  Venues                          Venues                = 1;
  string                         product              = 2;
  int64                          begin                = 3;
  int64                          end                  = 4;
}

message HistoricalTradesResult { 
   Retcode                      retcode                   = 1; 
   Trade                        trades                    = 2;
   string                       comment                   = 3;
}

message BacktestingReport {
  ClientInitilization               initialization                   = 1;
  map<string, Statistics>           statistics                       = 2;
  map<string, int64>                ticks                            = 3; 
  map<string, Position>             positions                        = 4; 
  string                            comment                          = 5;
}

message BalanceEvolution {
  repeated double                  balance                           = 1;
}

message Statistics {
  double                          history_quality                   			        	= 1;
  double                          gross_profit          	        				          = 4;
  double                          gross_loss                        				        = 6;
  double                          total_net_profit                   				        = 7;
  double                          balance_drawdown_absolute                  	    	= 8;
  double                          balance_drawdown_maximal                  	    	= 9;
  double                          balance_drawdown_relative                  		    = 10;
  double                          equity_drawdown_absolute                  		    = 11;
  double                          equity_drawdown_maximal                  			    = 12;
  double                          equity_drawdown_relative                  		    = 13;
  double                          profit_factor                  					          = 14;
  double                          recovery_factor                  					        = 15;
  double                          ahpr                  							              = 16;
  double                          ghpr                  							              = 17;
  double                          expected_payoff                  					        = 18;
  double                          sharpe_ratio                  					          = 19;
  double                          z_score                  							            = 20;
  double                          total_trades                  					          = 21;
  double                          total_deals                  						          = 22;
  double                          short_trades_won                  				        = 23;
  double                          long_trades_won                  					        = 24;
  double                          profit_trades_total                  				      = 25;
  double                          loss_trades_total                  				        = 26;
  double                          largest_profit_trade                  			      = 27;
  double                          largest_loss_trade                  				      = 28;
  double                          average_profit_trade                  			      = 29;
  double                          average_loss_trade                  				      = 30;
  double                          maximum_consecutive_wins                  		    = 31;
  double                          maximum_consecutive_wins_count             		    = 32;
  double                          maximum_consecutive_losses                  		  = 33;
  double                          maximum_consecutive_losses_count                  = 34;
  double                          maximal_consecutive_profit                  		  = 35;
  double                          maximal_consecutive_profit_count                  = 36;
  double                          maximal_consecutive_loss                  		    = 37;
  double                          maximal_consecutive_loss_count             		    = 38;
  double                          average_consecutive_wins                 		      = 39;
  double                          average_consecutive_losses                  		  = 40;
  double                          wins_total_series                               	= 41;
  double                          loss_total_series                               	= 42;
  double                          correlation_mfe                 			    	      = 43;
  double                          correlation_mae                  					        = 44;
  int64                           minimal_position_holding_time                   	= 45;
  int64                           maximal_position_holding_time                   	= 46;
  int64                           average_position_holding_time                    	= 47;
  map<string, BalanceEvolution>   balance_evolution                                 = 48; 
  double                          lr_slope_balance           	        			        = 49;	  
  double                          lr_intercept_balance           	        			    = 50;	  
  double                          lr_r_squared_balance          	        			    = 51;	  
  double                          lr_slope_standard_error_balance       		        = 52;	  
  double                          lr_intercept_standard_error_balance               = 53;
} 